# lca-app

./: .env  .gitignore  lca_app.py  pyproject.toml  requirements.txt
api/: Dockerfile  README.md  docker-compose.yml  model_runs.db  pyproject.toml
api/src/market_structure_backend/: __init__.py  main.py
api/src/market_structure_backend/api/: __init__.py  app.py
api/src/market_structure_backend/api/routes/: __init__.py  health.py  progress.py  runs.py
api/src/market_structure_backend/core/: __init__.py  config.py
api/src/market_structure_backend/db/: __init__.py  models.py
api/src/market_structure_backend/progress/: __init__.py  tracker.py
api/src/market_structure_backend/schemas/: __init__.py  api.py
api/src/market_structure_backend/workers/: __init__.py  model_implementations.py  runner.py  tasks.py
app/: lca_app.py
lca_analysis/src/market_structure/: utils.py
lca_analysis/src/market_structure/models/: dcm.py  mca.py  nmf.py
src/market_structure/: __init__.py  config.py
src/market_structure/models/: __init__.py  bayesian.py  factor.py  lca.py
src/market_structure/plotting/: __init__.py  core.py  model_plots.py
