[project]
name = "lca-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.22.0",
    "jax>=0.8.1",
    "numba>=0.63.1",
    "numpy>=1.24.0",
    "numpyro>=0.19.0",
    "nutpie>=0.16.4",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "prince>=0.16.2",
    "pymc>=5.26.1",
    "scipy>=1.11.0",
    "streamlit>=1.28.0",
]

